# penduraai-api

./: .deepsource.toml  .gitignore  Procfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.toml
.circleci/: config.yml
accounts/: admin.py  authentication.py  backends.py  fields.py  managers.py  middleware.py  models.py  permissions.py  relations.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200602_1814.py  0002_auto_20200607_1456.py  0002_auto_20200613_1757.py  0002_auto_20200614_1841.py  0002_auto_20200809_2354.py
accounts/tests/: test_api.py  test_url_resolve.py  test_urls.py  test_user_api.py  test_user_urls.py
authentications/: urls.py  views.py
auths/tests/: test_url_resolve.py
books/: admin.py  consumers.py  dictdb.py  models.py  routing.py  serializers.py  services.py  storages.py  validators.py  views.py
books/migrations/: 0001_initial.py
bridges/: admin.py  consumers.py  db.py  dbdict.py  decorators.py  encoders.py  exceptions.py  fields.py  middleware.py  models.py  permissions.py  relations.py  routing.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
bridges/migrations/: 0001_initial.py
bridges/tests/: test_url_resolve.py  test_urls.py
broker/: consumers.py  dictdb.py  serializers.py  services.py  storages.py  validators.py
brokers/: consumers.py  decorators.py  dictdb.py  routing.py  serializers.py  services.py  urls.py  validators.py  views.py
cash_book/: apps.py  models.py
cash_book/migrations/: 0001_initial.py
cashbooks/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
cashbooks/migrations/: 0001_initial.py  0002_transaction.py  0003_auto_20200523_0008.py  0004_auto_20200523_1236.py
notebooks/: __init__.py  admin.py  apps.py  consumers.py  decorators.py  dictdb.py  filters.py  managers.py  models.py  permissions.py  querysets.py  relations.py  routing.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py
notebooks/migrations/: 0001_initial.py  0002_auto_20200601_2351.py  0002_auto_20200614_1841.py  0002_auto_20200616_1306.py  0003_auto_20200604_1947.py  0003_auto_20200614_1920.py  0004_auto_20200614_1950.py  0004_record_strikethrough.py
notebooks/tests/: test_url_resolve.py  test_urls.py
penduraai/: asgi.py  channels.py  channels_routing.py  routing.py  settings.py  urls.py
requirements/: requirements-dev.txt
