[tool.poetry]
name = "penduraai-api"
version = "0.1.0"
description = "API of term sales control app."
authors = ["Hebert <hebertjulio@yahoo.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.2"
django = "3.0.10"
djangorestframework-simplejwt = "^4.4.0"
djangorestframework = "^3.11.0"
django-model-utils = "^4.0.0"
djangorestframework-api-key = "^2.0.0"
django-filter = "^2.2.0"
dynaconf = {extras = ["toml"], version = "^3.1.0"}
psycopg2 = "^2.8.5"
whitenoise = "^5.1.0"
redis = "^3.5.2"
channels = "^2.4.0"
channels_redis = "^3.0.1"
daphne = "^2.5.0"
django-silk = "^4.0.1"
dj_database_url = "^0.5.0"
django-redis = "^4.12.1"
drf-rw-serializers = "^1.0.3"
celery = "^4.4.7"
django-cors-headers = "^3.4.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
ipdb = "^0.13.2"
poetry = "^1.0.8"
pytest = "^6.1.1"
pytest-django = "^3.10.0"
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
